# clapfile

./: Cargo.toml  README.md  clapfile.toml  clapfile.yml  flake.nix
.github/workflows/: test.yml
modules/: bare-module.nix
modules/nixos/: clapfile.nix
modules/nixos/tests/: default.nix
nix/: make-command.nix  module.nix  nixos-module.nix
src/: completions.rs  config_file.rs  exporters.rs  main.rs  runner.rs
