[package]
name = "clapfile"
version = "0.1.0"
edition = "2021"
description = "Generate a command line app from a config file"
license = "MIT"
keywords = ["cli", "clap", "config", "file", "generate"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "string"] }
clap_complete = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
